# sargeom

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE.md  README.md  api_reference.html  examples.html  genindex.html  index.html  installation_guide.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  user_guide.html
.github/: copilot-instructions.md
_images/: inheritance-055f8ed9946f7404bfb88f978b37063c2a795dbc.png.map  inheritance-5b05f3436ccbd073cfc9f2a1feff532c628328b9.png.map  inheritance-6e73e35e4002cae3e93a9bf09bc92021ef819065.png.map  inheritance-8b2db5b45eff80c67ed897a067a0b6f17d44b301.png.map  inheritance-ab3371d333e040433fa2dbccb4305c64de08e138.png.map
_modules/: index.html
_sources/: api_reference.rst.txt  examples.rst.txt  index.rst.txt  installation_guide.rst.txt  quickstart.rst.txt
api/: sargeom.AntennaAttitude.html  sargeom.NominalTrajectory.html  sargeom.TRAJ_DTYPE.html  sargeom.Trajectory.html  sargeom.coordinates.Cartesian3.html  sargeom.coordinates.CartesianECEF.html  sargeom.coordinates.CartesianLocalENU.html  sargeom.coordinates.CartesianLocalNED.html  sargeom.coordinates.Cartographic.html  sargeom.coordinates.ELPS_CLARKE_1880.html  sargeom.coordinates.ELPS_WGS84.html  sargeom.coordinates.Ellipsoid.html  sargeom.coordinates.LambertConicConformal.html  sargeom.coordinates.negativePiToPi.html
examples/: bistatic_angles.html  bistatic_angles.ipynb  nominal_trajectory.html  nominal_trajectory.ipynb
tests/: test_cartesian.py  test_cartesian_ecef.py  test_cartesian_enu.py  (+6 more)
(+46 files in other folders)
