[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sargeom"
version = "0.4.0"
authors = [
  { name="Olivier LEVEQUE", email="olivier.leveque@onera.fr" },
]
description = "A Python package for Synthetic Aperture Radar (SAR) geometry calculations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx",
    "sphinx-design",
    "sphinx-inline-tabs",
    "sphinx-copybutton",
    "sphinx-subfigure",
    "sphinx-automodapi",
    "numpydoc",
    "nbsphinx",
    "ipython",
]
examples = [
    "folium",
    "pandas",
    "shapely",
    "simplekml",
    "pyproj",
]
dev = [
    "build",
    "twine",
]

[project.urls]
homepage = "https://github.com/oleveque/sargeom.git"